# client-server-chat

./: CMakeLists.txt  README.md  clientwindow.cpp  clientwindow.ui
Client/: CMakeLists.txt  clientwindow.cpp  clientwindow.h  clientwindow.ui  connectionwindow.cpp  connectionwindow.h  connectionwindow.ui  main.cpp
Server/: CMakeLists.txt  main.cpp  messagehistory.cpp  messagehistory.h  server.cpp  server.h
